--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
    - assets/food.jpg
    - assets/lang/tr.json
    - assets/lang/en.json
+   - assets/images/bmilogo.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
