--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0
+  flutter_spinkit: ^3.1.0
+  progress_hud_v2: ^2.0.0
+  loadmore: ^1.0.2
+
+
 
 dev_dependencies:
   flutter_test:
