--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_spinkit: ^3.1.0
   progress_hud_v2: ^2.0.0
   loadmore: ^1.0.2
-
+  font_awesome_flutter: ^8.2.0
 
 
 dev_dependencies:
