--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,17 @@ dependencies:
   progress_hud_v2: ^2.0.0
   loadmore: ^1.0.2
   font_awesome_flutter: ^8.2.0
+  flutter_launcher_icons: ^0.7.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
