--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,12 @@ dependencies:
   loadmore: ^1.0.2
   font_awesome_flutter: ^8.2.0
   flutter_launcher_icons: ^0.7.0
-
+  country_icons: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: ^0.17.1
 
 flutter_icons:
   android: true
@@ -52,8 +53,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/food.jpg
-   - assets/lang/tr.json
-   - assets/lang/en.json
    - assets/images/bmilogo.png
   #  - images/a_dot_ham.jpeg
 
