--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.0
   country_icons: ^1.1.0
   flutter_slidable: ^0.4.9
+  firebase_messaging: ^3.0.1
 
 dev_dependencies:
   flutter_test:
